--- a/trinity.html
+++ b/trinity.html
@@ -42,7 +42,7 @@ hmoll@trinity.edu<br><br><p>
 <body>
 <div style="font-family:'Annie Use Your Telescope', cursive; font-size: 18px; margin-left: 200px">
 
-<h1>Webpage</h1>
+<h1>Trinity</h1>
 <br>
 <br>
 <hr>
